@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=8" /> <!-- enables fetching JSON values in IE... *sigh* -->
-	<meta name="description" content="Japanese kana flashcard learning site." />
-	<meta name="keywords" content="japanese, kana, hiragana, katakana, e-learning, flashcard" />
+	<meta name="description" content="Zanzou is a Japanese kana flashcard learning website. It is a place to practice your kana memory and its goal is to help people memorize Japanese kana symbols." />
+	<meta name="keywords" content="japanese, kana, hiragana, katakana, roumaji, voice, e-learning, flashcard" />
 	<title>Memorize kana easily with Zanzou</title>
 	<link rel="stylesheet" type="text/css" href="zanzou.css" />
 	<link rel="shortcut icon" href="/images/favicon.ico" />
